@@ -1,5 +1,12 @@
 2006-02-27  Richard A. Stellingwerff  <remenic@gmail.com>
 
+	* engines/clearlooks/src/clearlooks_style.c:
+	(combo_box_get_seperator_pos):
+
+	Fixed another memory leak...
+
+2006-02-27  Richard A. Stellingwerff  <remenic@gmail.com>
+
 	* engines/clearlooks/src/clearlooks_style.c: (draw_flat_box):
 	* engines/clearlooks/src/support.c:
 	(gtk_treeview_get_header_index):
